[gd_scene load_steps=3 format=3 uid="uid://du4wficbqnycu"]

[ext_resource type="PackedScene" uid="uid://ipwgkmpww5uh" path="res://Scenes/GUI/ability_menu_ui.tscn" id="1_1cd0x"]
[ext_resource type="Script" uid="uid://m73bbnpt16yc" path="res://Scenes/GUI/ability_tooltip_popup.gd" id="1_vxfii"]

[node name="AbilityTooltipPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vxfii")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.509804)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -70.0
offset_right = 160.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2

[node name="TooltipAbility" type="CenterContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AbilityMenuUI" parent="VBoxContainer/TooltipAbility" instance=ExtResource("1_1cd0x")]
layout_mode = 2

[node name="AbilityDescription" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "This is the ability description.This is the ability description.This is the ability description.This is the ability description.This is the ability description.
"
fit_content = true
horizontal_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
